--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
-  - source: /translations/*en.csv
-    translation: /translations/translations_%two_letters_code%.%file_extension%
+  - source: /translations/campaigns/campaign_*en.csv
+    translation: /translations/campaigns/campaign_%locale_with_underscore%.%file_extension%
     first_line_contains_header: 1
     scheme: 'identifier,source_phrase,translation'
